# Spaceship-Titanic

./: .gitignore  README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
spaceship_titanic/: model.py
spaceship_titanic/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
spaceship_titanic/catboost_info/learn/: events.out.tfevents
spaceship_titanic/catboost_info/test/: events.out.tfevents
spaceship_titanic/config/: config_reader.py  constants.py
spaceship_titanic/data/: results.csv
spaceship_titanic/data/model/: model.pkl
spaceship_titanic/notebooks/: notebook.ipynb  notebook_with_the_best_score.ipynb  solution.ipynb
spaceship_titanic/tuning/: model_tuning.py
spaceship_titanic/utils/: data_transformation.py  logger.py
