[project]
name = "spaceship-titanic"
version = "0.1.0"
description = ""
authors = [
    {name = "Victoria Klyueva",email = "vika_klyueva@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
]

[tool.poetry.dependencies]
python = "3.12.1"
scikit-learn = "^1.6.1"
pandas = "^2.2.3 "
numpy = "^1.9.0"
catboost = "1.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
